--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-a
+<!DOCTYPE html>
 <!DOCTYPE html>
 <html>
     <head>
@@ -11,11 +11,16 @@ a
         <input type="text" id="n1">
         <p>
             <button onclick="cube()"> x^3 </button>
+            <button onclick="sine()"> sin </button>
         </p>
         <script type="text/javascript">
             function cube() {
                 var num = document.getElementById("n1");
                 num.value = Math.pow(num.value, 3);
+            }
+            function sine() {
+                var num = document.getElementById("n1");
+                num.value = Math.sin(num.value);
             }
         </script>
     </body>
